deepview-rt-sys/deepview-rt.h


typedef enum {
    NN_SUCCESS = 0,
    NN_ERROR_INTERNAL,
    NN_ERROR_INVALID_HANDLE,
    NN_ERROR_OUT_OF_MEMORY,
    NN_ERROR_OUT_OF_RESOURCES,
    NN_ERROR_NOT_IMPLEMENTED,
    NN_ERROR_INVALID_PARAMETER,
    NN_ERROR_TYPE_MISMATCH,
    NN_ERROR_SHAPE_MISMATCH,
    NN_ERROR_INVALID_SHAPE,
    NN_ERROR_INVALID_ORDER,
    NN_ERROR_INVALID_AXIS,
    NN_ERROR_MISSING_RESOURCE,
    NN_ERROR_INVALID_ENGINE,
    NN_ERROR_TENSOR_NO_DATA,
    NN_ERROR_KERNEL_MISSING,
    NN_ERROR_TENSOR_TYPE_UNSUPPORTED,
    NN_ERROR_TOO_MANY_INPUTS,
    NN_ERROR_SYSTEM_ERROR,
    NN_ERROR_INVALID_LAYER,
    NN_ERROR_MODEL_INVALID,
    NN_ERROR_MODEL_MISSING,
    NN_ERROR_STRING_TOO_LARGE,
    NN_ERROR_INVALID_QUANT,
    NN_ERROR_MODEL_GRAPH_FAILED,
    NN_ERROR_GRAPH_VERIFY_FAILED,
} NNError;
typedef struct nn_tensor NNTensor;
typedef struct nn_context NNContext;
typedef void(nn_aux_object_free)(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
int32_t
nn_tensor_dims(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
int32_t
nn_tensor_size(const NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_DEPRECATED_SINCE_2_3
NN_API
int
nn_tensor_compare(NNTensor* left, NNTensor* right, double tolerance);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_reshape(NNTensor*     tensor,
                  int32_t       n_dims,
                  const int32_t shape[NN_ARRAY_PARAM(n_dims)]);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_shuffle(NNTensor*     output,
                  NNTensor*     input,
                  int32_t       n_dims,
                  const int32_t order[NN_ARRAY_PARAM(n_dims)]);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_fill(NNTensor* tensor, double constant);
NN_AVAILABLE_SINCE_2_0
NN_DEPRECATED_SINCE_2_3
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_randomize(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_copy(NNTensor* dest, NNTensor* source);
NN_AVAILABLE_SINCE_2_4
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_copy_buffer(NNTensor* tensor, const void* buffer, size_t bufsize);
NN_AVAILABLE_SINCE_2_4
NN_API
NNError
nn_tensor_requantize(NNTensor* dest, NNTensor* source);
NN_AVAILABLE_SINCE_2_4
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_quantize(NNTensor* dest, NNTensor* source, int axis);
NN_AVAILABLE_SINCE_2_4
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_quantize_buffer(NNTensor*    dest,
                          size_t       buffer_length,
                          const float* buffer,
                          int          axis);
NN_AVAILABLE_SINCE_2_4
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_dequantize(NNTensor* dest, NNTensor* source);
NN_AVAILABLE_SINCE_2_4
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_dequantize_buffer(NNTensor* source,
                            size_t    buffer_length,
                            float*    buffer);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_concat(NNTensor* output,
                 int32_t   n_inputs,
                 NNTensor* inputs[NN_ARRAY_PARAM(n_inputs)],
                 int32_t   axis);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_slice(NNTensor*     output,
                NNTensor*     input,
                int32_t       n_axes,
                const int32_t axes[NN_ARRAY_PARAM(n_axes)],
                const int32_t head[NN_ARRAY_PARAM(n_axes)],
                const int32_t tail[NN_ARRAY_PARAM(n_axes)]);
NN_AVAILABLE_SINCE_2_4_42
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_strided_slice(NNTensor*     output,
                        NNTensor*     input,
                        int32_t       n_axes,
                        const int32_t axes[NN_ARRAY_PARAM(n_axes)],
                        const int32_t head_[NN_ARRAY_PARAM(n_axes)],
                        const int32_t tail_[NN_ARRAY_PARAM(n_axes)],
                        const int32_t strides_[NN_ARRAY_PARAM(n_axes)]);
NN_AVAILABLE_SINCE_2_3
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_padding(NNTensor*      tensor,
                  const char*    padtype,
                  const int32_t* window,
                  const int32_t* stride,
                  const int32_t* dilation,
                  int32_t*       padded_shape,
                  int32_t*       paddings);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_pad(NNTensor*     output,
              NNTensor*     input,
              const int32_t head[4],
              const int32_t tail[4],
              double        constant);
NN_AVAILABLE_SINCE_2_2
NN_DEPRECATED_SINCE_2_3
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_load_file(NNTensor* tensor, const char* filename);
NN_AVAILABLE_SINCE_2_2
NN_DEPRECATED_SINCE_2_3
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_load_file_ex(NNTensor* tensor, const char* filename, uint32_t proc);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_load_image(NNTensor* tensor, const void* image, size_t image_size);
typedef NNError(nn_user_ops)(NNContext*  context,
                             const char* opname,
                             size_t      index);