deepviewrt-sys/src/ffi.rs

extern "C" {
    #[doc = " Element-wise comparison of two tensors within a given tolerance, returning\n total number of errors relative to the left tensor.  If the two tensors are\n incompatible the volume of the left tensor is returned (all elements\n invalid).\n\n @public @memberof NNTensor\n @since 2.0\n @deprecated 2.3"]
    pub fn nn_tensor_compare(
        left: *mut NNTensor,
        right: *mut NNTensor,
        tolerance: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Reshapes the given tensor to the provided new shape.\n\n @param tensor the tensor object used in the operation\n @param n_dims the number of dimensions which the tensor will contain after\n the operation completes successfully.  It must also match the number of\n elements in @p shape.\n @param shape the new shape for the tensor.  The array must be at least\n @p n_dims elements in size.\n\n @return @ref NN_SUCCESS if the reshape is able to be performed\n @return @ref NN_ERROR_SHAPE_MISMATCH if the new shape cannot be represented\n given the previous shape of the tensor.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_reshape(tensor: *mut NNTensor, n_dims: i32, shape: *const i32) -> NNError;
}
extern "C" {
    #[doc = " Shuffles (transpose) the tensor moving the current dimensions into the\n ordering defined in the order parameter.\n\n For example a traditional matrix transpose is done using order[] = { 1, 0 }\n in other words, the 0 dimension of the output references the 1 dimension of\n the input and the 1 dimension of the output references the 0 dimension of the\n input.\n\n Another example would be shuffling an NCHW tensor to NHWC using order[] = {\n 0, 2, 3, 1 }\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_shuffle(
        output: *mut NNTensor,
        input: *mut NNTensor,
        n_dims: i32,
        order: *const i32,
    ) -> NNError;
}
extern "C" {
    #[doc = " Fills the tensor with the provided constant.  The constant is captured\n as double precision (64-bit floating point) which has 53-bits of precision\n on whole numbers.  This means the constant CANNOT represent all 64-bit\n integers but it CAN represent all 32-bit and lower integers.  If full\n 64-bit integer support is required @ref nn_tensor_map can be used though\n it is less efficient with some engines because of the addition memory\n transfer required.\n\n The double will be cast appropriately to the target tensor's type before\n filling the tensor.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_fill(tensor: *mut NNTensor, constant: f64) -> NNError;
}
extern "C" {
    #[doc = " Randomizes the data within the tensor.\n\n @public @memberof NNTensor\n @since 2.0\n @deprecated 2.3"]
    pub fn nn_tensor_randomize(tensor: *mut NNTensor) -> NNError;
}
extern "C" {
    #[doc = " Copies the contents of source tensor into destination tensor.\n\n This operation only copies the data and does not affect the\n destination tensor's properties.  The destination tensor must\n have an equal or larger volume.  If required data will be converted.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_copy(dest: *mut NNTensor, source: *mut NNTensor) -> NNError;
}
extern "C" {
    #[doc = " Loads a tensor with data from a user buffer\n User has to maintain the buffer and ensure compatibility with NHWC tensor\n Function will return error if there is a size mismatch\n i.e (bufsize != nn_tensor_size(tensor)) or tensor is invalid\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_copy_buffer(
        tensor: *mut NNTensor,
        buffer: *const ::std::os::raw::c_void,
        bufsize: usize,
    ) -> NNError;
}
extern "C" {
    #[doc = " Requantizes the source tensor into the destination tensor.\n\n The source tensor and destination tensor should be either I8 or U8, and\n per tensor quantized.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_requantize(dest: *mut NNTensor, source: *mut NNTensor) -> NNError;
}
extern "C" {
    #[doc = " Quantizes the source tensor into the destination tensor.\n\n The source tensor should be float and the destination integer.  If the\n destination tensor does not have quantization parameters they will be\n calculated from the source tensor and stored into the destination tensor.\n\n When calculating the quantization parameters if axis is a valid axis* then\n per-channel quantization will be performed along the axis, otherwise\n per-tensor quantization will be performed.  If the destination tensor has\n quantization parameters axis is ignored.\n\n Valid Axis: (axis > 0 && axis < n_dims)\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_quantize(
        dest: *mut NNTensor,
        source: *mut NNTensor,
        axis: ::std::os::raw::c_int,
    ) -> NNError;
}
extern "C" {
    #[doc = " Quantizes the source buffer into the destination tensor.\n\n The source tensor should be float and the destination integer.  If the\n destination tensor does not have quantization parameters they will be\n calculated from the source buffer and stored into the destination tensor.\n\n When calculating the quantization parameters if axis is a valid axis* then\n per-channel quantization will be performed along the axis, otherwise\n per-tensor quantization will be performed. If the destination tensor has\n quantization parameters axis is ignored.\n\n Valid Axis: (axis > 0 && axis < n_dims)\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_quantize_buffer(
        dest: *mut NNTensor,
        buffer_length: usize,
        buffer: *const f32,
        axis: ::std::os::raw::c_int,
    ) -> NNError;
}
extern "C" {
    #[doc = " De-quantizes the source tensor into the destination tensor.\n\n The source tensor should be integer and the destination float.  The source\n tensor must have quantization parameters otherwise the operation will simply\n cast the integer data to float.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_dequantize(dest: *mut NNTensor, source: *mut NNTensor) -> NNError;
}
extern "C" {
    #[doc = " De-quantizes the source tensor into the destination buffer.\n\n The source tensor should be integer and the destination float.  The source\n tensor must have quantization parameters otherwise the operation will simply\n cast the integer data to float.\n\n The buffer must be at least buffer_length*sizeof(float) size in bytes.\n\n @public @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_dequantize_buffer(
        source: *mut NNTensor,
        buffer_length: usize,
        buffer: *mut f32,
    ) -> NNError;
}
extern "C" {
    #[doc = " nn_tensor_concat concatenates all of the given input tensors into\n the given output tensor.\n\n @output pointer to the output tensor\n @inputs list of pointers to the input tensors\n @n_inputs the number of inputs\n @axis the axis along which to concatenate the inputs\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_concat(
        output: *mut NNTensor,
        n_inputs: i32,
        inputs: *mut *mut NNTensor,
        axis: i32,
    ) -> NNError;
}
extern "C" {
    #[doc = " nn_tensor_slice copies a slice of the tensor into output. For a version which\n supports strides see @ref nn_tensor_strided_slice.\n\n The axes, head, and tail must be of length n_axes or NULL.  Calling slice\n with axes==NULL will ignore head/tail and is effectively @ref nn_tensor_copy.\n\n When head is NULL all axes are assumed to start at 0.  When tail is NULL all\n axes are assumed to end at (len(axis) - head) for the given axis.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_slice(
        output: *mut NNTensor,
        input: *mut NNTensor,
        n_axes: i32,
        axes: *const i32,
        head: *const i32,
        tail: *const i32,
    ) -> NNError;
}
extern "C" {
    pub fn nn_tensor_strided_slice(
        output: *mut NNTensor,
        input: *mut NNTensor,
        n_axes: i32,
        axes: *const i32,
        head_: *const i32,
        tail_: *const i32,
        strides_: *const i32,
    ) -> NNError;
}
extern "C" {
    #[doc = " nn_tensor_padding calculates the paddings for the given tensor, padtype,\n window, stride, and dilation given n_dims being queried from the tensor's\n nn_tensor_dims().\n\n The paddings pointer must point to an array of 2 * n_dims elements into which\n the function will write the head/tail padding tuples for each of the n_dims\n provided dimensions.  The padded_shape parameter must point to an array of\n n_dims elemens which will receive the output (padded) shape.\n\n The padtype can be \"VALID\" or \"SAME\".  When padtype is \"SAME\" padded_shape\n will equal the shape of the input tensor and the paddings will be provided to\n achieve this shape.  When padtype is \"VALID\" then paddings will be all zeros\n and the padded_shape will provide the target output shape given the provided\n parameters.\n\n @public @memberof NNTensor\n @since 2.3"]
    pub fn nn_tensor_padding(
        tensor: *mut NNTensor,
        padtype: *const ::std::os::raw::c_char,
        window: *const i32,
        stride: *const i32,
        dilation: *const i32,
        padded_shape: *mut i32,
        paddings: *mut i32,
    ) -> NNError;
}
extern "C" {
    #[doc = " nn_tensor_pad implements a padded Tensor to Tensor copy.  This can be used to\n achieve the various convolution padding strategies (SAME, FULL).  For example\n SAME conv2d would use the following padded_copy before running the conv2d\n layer.\n\n output_shape = { input_shape[0],\n                  int(ceil(float(input_shape[1]) /\n strides[1])), int(ceil(float(input_shape[2]) / strides[2])), weights_shape[3]\n };\n\n pad_height = (output_shape[1] - 1) * strides[1] + weights_shape[0] -\n input_shape[1]; pad_width  = (output_shape[2] - 1) * strides[2] +\n weights_shape[1] - input_shape[2];\n\n @output pointer to the output tensor\n @input pointer to the input tensor\n @head lead-in length of the pad for dimension NHWC\n @tail lead-out length of the pad for dimension NHWC\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_pad(
        output: *mut NNTensor,
        input: *mut NNTensor,
        head: *const i32,
        tail: *const i32,
        constant: f64,
    ) -> NNError;
}
extern "C" {
    #[doc = " Loads an image from file into the provided tensor.\n\n @public @memberof NNTensor\n @since 2.2\n @deprecated 2.3"]
    pub fn nn_tensor_load_file(
        tensor: *mut NNTensor,
        filename: *const ::std::os::raw::c_char,
    ) -> NNError;
}
extern "C" {
    #[doc = " Loads an image from file into the provided tensor.\n\n @public @memberof NNTensor\n @since 2.2\n @deprecated 2.3"]
    pub fn nn_tensor_load_file_ex(
        tensor: *mut NNTensor,
        filename: *const ::std::os::raw::c_char,
        proc_: u32,
    ) -> NNError;
}
extern "C" {
    #[doc = " Loads an image from the provided buffer and decodes it accordingly, the\n function uses the images headers to find an appropriate decoder.  The\n function will handle any required casting to the target tensor's format.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_load_image(
        tensor: *mut NNTensor,
        image: *const ::std::os::raw::c_void,
        image_size: usize,
    ) -> NNError;
}
